rework health services